[gd_scene load_steps=2 format=1]

[ext_resource path="res://UI/main_menu/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="panel_main" type="Panel" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 10.0
margin/right = 210.0
margin/bottom = 440.0

[node name="main_label" type="Label" parent="panel_main"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 10.0
margin/right = 0.0
margin/bottom = 30.0
text = "Bubulle <3"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_solo" type="Button" parent="panel_main"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 10.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Single Player"
flat = false

[node name="button_multi" type="Button" parent="panel_main"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 110.0
margin/right = 10.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Multiplayer"
flat = false

[node name="button_tutorial" type="Button" parent="panel_main"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 160.0
margin/right = 10.0
margin/bottom = 180.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tutorial"
flat = false

[node name="button_training" type="Button" parent="panel_main"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 210.0
margin/right = 10.0
margin/bottom = 230.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Training"
flat = false

[node name="button_options" type="Button" parent="panel_main"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 80.0
margin/right = 10.0
margin/bottom = 60.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false

[node name="button_leave" type="Button" parent="panel_main"]

anchor/top = 1
anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 30.0
margin/right = 10.0
margin/bottom = 10.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Leave"
flat = false

[node name="panel_misc" type="Panel" parent="."]

anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 450.0
margin/top = 10.0
margin/right = 650.0
margin/bottom = -376.0

[node name="dev_command_label" type="Label" parent="panel_misc"]

anchor/right = 1
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 10.0
margin/right = 10.0
margin/bottom = 30.0
text = "Dev Commands"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="button_fork" type="Button" parent="panel_misc"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 60.0
margin/right = 10.0
margin/bottom = 80.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Duplicate Client"
flat = false

[node name="button_test" type="Button" parent="panel_misc"]

anchor/right = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 10.0
margin/top = 110.0
margin/right = 10.0
margin/bottom = 130.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Tests"
flat = false

[connection signal="pressed" from="panel_main/button_solo" to="." method="_on_button_solo_pressed"]

[connection signal="pressed" from="panel_main/button_multi" to="." method="_on_button_multi_pressed"]

[connection signal="pressed" from="panel_main/button_tutorial" to="." method="_on_button_tutorial_pressed"]

[connection signal="pressed" from="panel_main/button_training" to="." method="_on_button_training_pressed"]

[connection signal="pressed" from="panel_main/button_options" to="." method="_on_button_options_pressed"]

[connection signal="pressed" from="panel_main/button_leave" to="." method="_on_button_leave_pressed"]

[connection signal="pressed" from="panel_misc/button_fork" to="." method="_on_button_fork_pressed"]

[connection signal="pressed" from="panel_misc/button_test" to="." method="_on_button_test_pressed"]


